// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SampleBasketSection component renders correctly 1`] = `
<div>
  <div
    class="Section-root Section-white css-10chrh8"
    data-testid="sample-basket-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="RichText-root css-1lf5op0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
            data-testid="typography"
          >
            test rich text
          </p>
        </div>
        <div
          class="css-15l37u8"
        >
          <div
            class="SampleBasketSectionProducts-product-wrapper ColorPair-white css-963r91"
            data-testid="tappable-card-box"
          >
            <a
              class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
              data-testid="shopping-cart-product-sample-1"
              href="/no/sample-1-details/"
              tabindex="0"
            >
              <img
                alt="sample-1"
                class="SampleBasketSectionProducts-product-image TappableCard-headerPicture TappableCard-contain css-11fi03y-Media"
                data-testid="tappable-card-media"
                loading="lazy"
                src="http://localhost:8000/image-real-file-name.jpg"
                style="object-fit: contain; object-position: center;"
              />
              <div
                class="TappableCard-body css-c6k36h"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 TappableCard-title TappableCard-noBrandLogo css-1vw7jv4-MuiTypography-root"
                  data-testid="tappable-card-body-title"
                >
                  sample-1
                </h6>
                <h6
                  class="MuiTypography-root MuiTypography-h6 TappableCard-text css-1nuwz6u-MuiTypography-root"
                  data-testid="tappable-card-body-subtitle"
                >
                  green | rough
                </h6>
                <div
                  class="TappableCard-text"
                  data-testid="tappable-card-body-description"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
                    data-testid="product-sample-card-description"
                  >
                    1x2x3 mm
                  </p>
                </div>
              </div>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
            <div
              class="TappableCard-footer css-1rg9dq1"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                data-testid="button"
                tabindex="0"
                type="button"
              >
                MC: pdp.overview.removeSample
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="RemoveIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 13H5v-2h14v2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="css-1sw7om6"
        >
          <button
            class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-11nrv4h-MuiButtonBase-root-MuiButton-root"
            data-testid="sample-basket-section-complete-order"
            tabindex="0"
            type="button"
          >
            MC: pdp.overview.completeSampleOrder
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="ShoppingCartIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zM1 2v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.14 0-.25-.11-.25-.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.08-.14.12-.31.12-.48 0-.55-.45-1-1-1H5.21l-.94-2H1zm16 16c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SampleBasketSection component should render form after complete button press 1`] = `
<div>
  <div
    class="Section-root Section-white css-10chrh8"
    data-testid="sample-basket-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="RichText-root css-1lf5op0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
            data-testid="typography"
          >
            test rich text
          </p>
        </div>
        <div
          class="css-15l37u8"
        >
          <div
            class="SampleBasketSectionProducts-product-wrapper ColorPair-white css-963r91"
            data-testid="tappable-card-box"
          >
            <a
              class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
              data-testid="shopping-cart-product-sample-1"
              href="/no/sample-1-details/"
              tabindex="0"
            >
              <img
                alt="sample-1"
                class="SampleBasketSectionProducts-product-image TappableCard-headerPicture TappableCard-contain css-11fi03y-Media"
                data-testid="tappable-card-media"
                loading="lazy"
                src="http://localhost:8000/image-real-file-name.jpg"
                style="object-fit: contain; object-position: center;"
              />
              <div
                class="TappableCard-body css-c6k36h"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 TappableCard-title TappableCard-noBrandLogo css-1vw7jv4-MuiTypography-root"
                  data-testid="tappable-card-body-title"
                >
                  sample-1
                </h6>
                <h6
                  class="MuiTypography-root MuiTypography-h6 TappableCard-text css-1nuwz6u-MuiTypography-root"
                  data-testid="tappable-card-body-subtitle"
                >
                  green | rough
                </h6>
                <div
                  class="TappableCard-text"
                  data-testid="tappable-card-body-description"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
                    data-testid="product-sample-card-description"
                  >
                    1x2x3 mm
                  </p>
                </div>
              </div>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
            <div
              class="TappableCard-footer css-1rg9dq1"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                data-testid="button"
                tabindex="0"
                type="button"
              >
                MC: pdp.overview.removeSample
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="RemoveIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 13H5v-2h14v2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Section-root css-10chrh8"
    data-testid="sample-basket-section-with-samples"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 Typography-underline css-1gn4sxn-MuiTypography-root"
          data-testid="typography"
        >
          Complete form
        </h2>
        <form
          class="Form-rightAlignButton css-1p7e5tt"
          data-testid="sample-basket-section-checkout-form"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 Grid-item css-8jwz8r-MuiGrid2-root"
              data-testid="grid-item"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root  css-cwb8cr-MuiFormControl-root-MuiTextField-root"
                data-testid="text-field-text"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-15zab3-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  for="text"
                  id="text-label"
                >
                  Text
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-1fd4s4x-MuiInputBase-root-MuiOutlinedInput-root"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                    data-testid="text-field-text-input"
                    id="text"
                    name="text"
                    type="text"
                    value=""
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-yjsfm1"
                    >
                      <span>
                        Text
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Form-buttonWrapper"
          >
            <button
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium Form-button css-11nrv4h-MuiButtonBase-root-MuiButton-root"
              data-gtm="{"id":"form-button1","action":"sample-1-green-rough-1x2x3 mm","label":"samples ordering basket form submitted"}"
              data-testid="contentful-form-section-Complete-form-submit-button"
              tabindex="0"
              type="submit"
            >
              Submit
              <span
                class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="ArrowForwardIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </form>
        <p
          class="MuiTypography-root MuiTypography-body1 RecaptchaPrivacyLinks css-1o02bdp-MuiTypography-root"
          data-testid="typography"
        >
          Dette nettstedet er beskyttet av reCAPTCHA og Googles 
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
            data-testid="recaptcha-privacy-policy-link"
            href="https://policies.google.com/privacy?hl=no-nb"
            referrerpolicy="no-referrer"
            rel="noreferrer"
            target="_blank"
          >
            Personvernregler
          </a>
           og 
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
            data-testid="recaptcha-terms-of-service-link"
            href="https://policies.google.com/terms?hl=no-nb"
            referrerpolicy="no-referrer"
            rel="noreferrer"
            target="_blank"
          >
            Vilkår for bruk
          </a>
           gjelder.
        </p>
      </div>
    </div>
  </div>
</div>
`;
